--- a/repo/front-app-test.properties
+++ b/repo/front-app-test.properties
@@ -1,6 +1,6 @@
-db.url=192.168.22.102.9
-db.username=guooo
-db.password=guooo
+db.url=10.111.158.173
+db.username=root
+db.password=4982
 
 db.port=3306
 
